# ScoreManagement

./: .gitignore  CMakeLists.txt  README.md  test.xlsx
include/: manager.hpp  student.hpp  ui.hpp
src/: main.cpp  manager.cpp  student.cpp  ui.cpp
